<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OX Android Demo</string>
    <string name="start_button">Add task</string>
    <string name="start_content">OX\nAndroid\nDemo\n\nvisit\ndev.ox.io</string>
    <string name="pref_url_title">OX URL</string>
    <string name="pref_url_summary">OX Server URL</string>
    
    <string name="pref_user_login_title">Login</string>
    <string name="pref_user_login_summary">Enter your username/login</string>
    
    <string name="pref_user_password_title">Password</string>
    <string name="pref_user_password_summary">Enter your password</string>
    
    <string name="menu_settings">Settings</string>

    
</resources>
